--- a/form-html01/index.html
+++ b/form-html01/index.html
@@ -15,6 +15,12 @@
           <div class="form-wrap">
             <h1> Sign Up</h1>
             <p>it's free and only takes a minute</p>
+            <form>
+              <div class="from-group">
+                <label for="first-name">First Name</label>
+                <input type="text" name="firstName" id="first-name">
+              </div>
+            </form>
 
           </div>
         </div>
