--- a/form-html01/index.html
+++ b/form-html01/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Providing free training and BI solutions.">
+    <meta name="author" content="Surush Cyrus (Rahimi Movaghar)">
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <title>Afsarsoft | Form HTML01</title>
   </head>
 
