--- a/sign-up01/index.html
+++ b/sign-up01/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Surush Cyrus (Rahimi Movaghar)">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-    <title>Afsarsoft | Form HTML01</title>
+    <title>Afsarsoft | Sign Up 01</title>
   </head>
 
   <body>
