--- a/media-queries01/index.html
+++ b/media-queries01/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sample nav bar using float">
+    <meta name="description" content="Sample media queries to create a responsive experience by checking the screen types.">
     <meta name="author" content="Afsarsoft, Surush Cyrus (Rahimi Movaghar)">
     <link rel="stylesheet" href="./styles/style.css">
     <title>Media Queries</title>
