--- a/nav-bar03/contact/index.html
+++ b/nav-bar03/contact/index.html
@@ -4,24 +4,22 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sample nav bar using float">
+    <meta name="description" content="Sample nav bar using Flexbox">
     <meta name="author" content="Afsarsoft, Surush Cyrus (Rahimi Movaghar)">
     <link rel="stylesheet" href="../styles/style.css">
-    <title>Afsarsoft | Contact</title>
+    <title>ABC | Contact</title>
   </head>
 
   <body>
 
     <header>
       <nav id="navbar">
-        <div class="container">
-          <h1 class="logo"><a href="../">Afsarsoft</a></h1>
-          <ul>
-            <li><a href="../">Home</a></li>
-            <li><a href="../about/">About</a></li>
-            <li><a class="current" href="./">Contact</a></li>
-          </ul>
-        </div>
+        <h1 class="logo"><a href="../">ABC</a></h1>
+        <ul>
+          <li><a href="../">Home</a></li>
+          <li><a href="../about/">About</a></li>
+          <li><a class="current" href="./">Contact</a></li>
+        </ul>
       </nav>
     </header>
 
