--- a/nav-bar02/contact/index.html
+++ b/nav-bar02/contact/index.html
@@ -4,17 +4,17 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sample nav bar using Flexbox">
+    <meta name="description" content="Sample nav bar using float">
     <meta name="author" content="Afsarsoft, Surush Cyrus (Rahimi Movaghar)">
     <link rel="stylesheet" href="../styles/style.css">
-    <title>ABC | Contact</title>
+    <title>Afsarsoft | Contact</title>
   </head>
 
   <body>
 
-    <header>
-      <nav id="navbar">
-        <h1 class="logo"><a href="../">ABC</a></h1>
+    <header class="main-head">
+      <nav>
+        <h1 class="logo"><a href="../">Afsarsoft</a></h1>
         <ul>
           <li><a href="../">Home</a></li>
           <li><a href="../about/">About</a></li>
