--- a/burger-menu01/index.html
+++ b/burger-menu01/index.html
@@ -15,9 +15,8 @@
   <body>
     <header class="main-head">
       <nav>
-        <h1 id="logo">Afsarsoft</h1>
+        <h1 class="logo"><a href="#top">Afsarsoft</a></h1>
         <ul class="nav-links">
-          <li><a href="#top">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#contact">Contact</a></li>
