--- a/burger-menu03/index.html
+++ b/burger-menu03/index.html
@@ -2,35 +2,45 @@
 <html lang="en">
 
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Burger Menu always visible using  JavaScript">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Burger Menu always visible using CSS">
     <meta name="author" content="Afsarsoft, Surush Cyrus (Rahimi Movaghar)">
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Afsarsoft | Burger Menu</title>
   </head>
 
-  <a name="top"></a>
-
   <body>
-    <header class="main-head">
-      <nav>
-        <h1 class="logo"><a href="#top">Afsarsoft</a></h1>
-        <ul class="nav-links">
-          <li><a href="#about">About</a></li>
-          <li><a href="#gallery">Gallery</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-        <div class="burger">
-          <span class="line1"></span>
-          <span class="line2"></span>
-          <span class="line3"></span>
+    <div class="menu-wrap">
+      <input type="checkbox" class="toggler">
+      <div class="hamburger">
+        <div></div>
+      </div>
+      <div class="menu">
+        <div>
+          <div>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div>
         </div>
-      </nav>
+      </div>
+    </div>
+
+    <header id="showcase">
+      <div class="container showcase-container">
+        <h1>Welcome</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas maiores sint impedit delectus quam molestiae explicabo cum facere ratione veritatis.</p>
+        <a href="#" class="btn">Read More</a>
+      </div>
     </header>
 
     <main>
-      <div class="container">
+      <div class="container-m">
         <section id="about">
           <div class="space"></div>
           <h1>About</h1>
@@ -76,9 +86,9 @@
           </p>
         </section>
 
-        <section id="gallery">
+        <section id="services">
           <div class="space"></div>
-          <h1>Gallery</h1>
+          <h1>Services</h1>
           <p class="big-space">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae expedita eveniet saepe quibusdam delectus error repellat!
             Provident odit aperiam fugit quaerat, debitis facilis enim dignissimos qui, consectetur placeat minus cum. Neque earum
@@ -153,11 +163,8 @@
       </div>
     </main>
 
-    <footer>
-      <h1>Afsarsoft&copy;</h1>
-    </footer>
 
-    <script src="./js/menu.js"></script>
+
   </body>
 
 </html>
