--- a/003-basic-tags/index.html
+++ b/003-basic-tags/index.html
@@ -12,8 +12,7 @@
     <!-- make it responsive to make it to work with any device-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Surush Cyrus website">
+    <meta name="description" content="Some info about the website">
     <meta name="keywords" content="Surush Cyrus, ...add more stuff ...>">
     <meta name="author" content="Surush Cyrus">
     <title>My Website Title</title>
