--- a/003-basic-tags/index.html
+++ b/003-basic-tags/index.html
@@ -11,9 +11,11 @@
 
     <!-- make it responsive to make it to work with any device-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <!-- info about website -->
     <meta name="description" content="Some info about the website">
+    <!-- tells search engine to search for info -->
     <meta name="keywords" content="Surush Cyrus, ...add more stuff ...>">
+    <!-- info about author -->
     <meta name="author" content="Surush Cyrus">
     <title>My Website Title</title>
   </head>
