--- a/005-links/index.html
+++ b/005-links/index.html
@@ -5,11 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Surush Cyrus website">
-    <meta name="keywords" content="Surush Cyrus, ...add more stuff ...>">
-    <meta name="author" content="Surush Cyrus">
-    <title>Links | Home</title>
+    <title>Links</title>
   </head>
 
   <body>
