--- a/008-list/index.html
+++ b/008-list/index.html
@@ -5,10 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content=" website info">
-    <meta name="keywords" content="Surush Cyrus, ...add more stuff ...>">
-    <meta name="author" content="Surush Cyrus">
-    <title>List | Home</title>
+    <title>List</title>
   </head>
 
   <body>
