--- a/009-table/index.html
+++ b/009-table/index.html
@@ -5,16 +5,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="website info">
-    <meta name="keywords" content="Surush Cyrus, ...add more stuff ...>">
-    <meta name="author" content="Surush Cyrus">
-    <title>Table | Home</title>
+    <title>Table</title>
   </head>
 
   <body>
     <h1>Table Lesson</h1>
     <hr />
-
 
     <table>
       <caption>My Table</caption>
