--- a/012-form-input/index.html
+++ b/012-form-input/index.html
@@ -5,10 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Surush Cyrus website">
-    <meta name="keywords" content="Surush Cyrus, ...add more stuff ...>">
-    <meta name="author" content="Surush Cyrus">
-    <title>Form & Input | Home</title>
+    <title>Form & Input</title>
   </head>
 
   <body>
