--- a/013-iframe/index.html
+++ b/013-iframe/index.html
@@ -8,12 +8,11 @@
     <meta name="description" content="Surush Cyrus website">
     <meta name="keywords" content="Surush Cyrus, ...add more stuff ...>">
     <meta name="author" content="Surush Cyrus">
-    <title>iframe | Home</title>
+    <title>iframe</title>
   </head>
 
-
   <body>
-    <h1>Iframe Lesson</h1>
+    <h1>Iframe</h1>
     <hr />
 
     <!--
