--- a/015-semantics/index.html
+++ b/015-semantics/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Surush Cyrus website" />
     <meta name="keywords" content="Surush Cyrus, ...add more stuff ...>" />
     <meta name="author" content="Surush Cyrus" />
-    <title>HTML Semantics | Home</title>
+    <title>HTML Semantics</title>
   </head>
 
   <body>
