--- a/031-burger-menu/index.html
+++ b/031-burger-menu/index.html
@@ -4,10 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Professional Photographer available for weddings and special events." />
-    <meta name="robots" content="index,follow" />
     <link rel="stylesheet" href="./styles/style.css" />
-    <title>Afsarsoft | Burger Menu</title>
+    <title>Burger Menu | JS</title>
   </head>
 
   <a name="top"></a>
