--- a/032-burger-menu/index.html
+++ b/032-burger-menu/index.html
@@ -4,11 +4,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Burger Menu always visible using CSS">
-    <meta name="author" content="Afsarsoft, Surush Cyrus (Rahimi Movaghar)">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
-    <title>Afsarsoft | Burger Menu</title>
+    <title>Burger Menu | CSS</title>
   </head>
 
   <body>
