--- a/045-sign-up/index.html
+++ b/045-sign-up/index.html
@@ -4,11 +4,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Providing free training and BI solutions.">
-    <meta name="author" content="Surush Cyrus (Rahimi Movaghar)">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-    <title>Afsarsoft | Sign Up 01</title>
+    <title>Sign Up</title>
   </head>
 
   <body>
