--- a/003-basic-tags/index.html
+++ b/003-basic-tags/index.html
@@ -23,25 +23,25 @@
   <!-- Meat and bones of html page goes to body, main content of our page goes here -->
 
   <body>
-    <h1>Hello world, this is my Website</h1>
-    <h2>Hello world, this is my Website</h2>
-    <h3>Hello world, this is my Website</h3>
-    <h4>Hello world, <i>italic stuff</i> this is my Website</h4>
-    <h5>Hello world, this is my Website</h5>
-    <h6>Hello world, this is my Website</h6>
+    <h1>Hello world, I am in Page h1 tag</h1>
+    <h2>Hello world, I am in Page h2 tag</h2>
+    <h3>Hello world, I am in Page h3 tag</h3>
+    <h4>Hello world, <i>italic style portion</i> in h4 tag</h4>
+    <h5>Hello world, I am in h5 tag</h5>
+    <h6>Hello world, I am in h6 tag</h6>
 
     <!-- adding a line-->
     <hr>
 
     <!-- italic -->
-    <p>This is <i>my</i> paragraph</p>
+    <p>I am in <i>italic tag</i> in paragraph portion</p>
 
     <!-- making "paragraph" bold-->
-    <p>This is another <b>paragraph</b></p>
+    <p>I am <b>in bold</b> in paragraph portion</p>
 
     <p>
       <!-- big, small info. making "paragraph" bold an italic-->
-      <big>This</big> is <small>my</small> <b><i>paragraph</i></b>
+      <big>The big tag</big> and <small>small tag</small> <b><i> in bold italic</i></b> paragraph portion
     </p>
 
     <!-- Line breaks, creating space between lines -->
@@ -65,14 +65,14 @@
         https://www.html.am/reference/html-special-characters.cfm
         https://www.w3schools.com/html/html_symbols.asp
      -->
-    <h2>Coyright &copy;</h2>
+    <h2>Coyright character &copy;</h2>
 
     <p>
       <!-- sup element -->
-    <h1>Hello I am <sup>1st</sup> Surush in town.</h1>
+    <h1> in h1 in paragraph portion using sup element. <sup>1st</sup> person in town.</h1>
 
     <!-- 10 to power of 2-->
-    10<sup>2</sup>
+    10 to the power of <sup>2</sup>
     </p>
   </body>
 
