--- a/004-style/index.html
+++ b/004-style/index.html
@@ -11,11 +11,11 @@
 
   <body style="background-color:lightblue">
     <h2 style="color:green">
-      Style and Colors
+      In h2 and style tag using colors
     </h2>
 
     <p style="color: red; background-color:blue">
-      paragraph text
+      In paragraph using style tag using colors
     </p>
   </body>
 
