--- a/010-div-span/index.html
+++ b/010-div-span/index.html
@@ -12,10 +12,11 @@
     <h1>Div & Span Lesson</h1>
     <hr />
 
-    <!--
-    Divs and Spans are containers and being used mainly for CSS programming to give style to page
-    Div is block element and takes entire page row. Span is inline element
-    -->
+    <p>
+      Divs and Spans are containers and being used mainly for CSS programming to give style to page. <br>
+      Div is block element and takes entire page row. Span is inline element.
+    </p>
+
     <span>Span1</span>
     <span>Span2</span>
 
