--- a/014-class-id/index.html
+++ b/014-class-id/index.html
@@ -10,6 +10,10 @@
   <body>
     <!-- Id is unique identifier and can be only one in a page -->
     <!-- In the below example, we cannot have another id="log" -->
+    <h2>Id is unique identifier and can be only one in a page</h2>
+    <h2>In the below example, we cannot have another id="log"</h2>
+    <h2>In classes, we can have repeated same classes to do same things using CSS</h2>
+
     <h1 id="log">Logo</h1>
 
     <h2>Article Title</h2>
