--- a/018-margin-padding/index.html
+++ b/018-margin-padding/index.html
@@ -11,7 +11,17 @@
   <body>
     <main>
       <section>
+
+        <p>
+          The padding is the space between the content and the border of a block. <br>
+          Margin is the space outside the border of a block.
+        </p>
+
+        <a href="https://afsarsoft.blob.core.windows.net/img/MarginPadding01.jpg" target="_blank">
+          <img src="https://afsarsoft.blob.core.windows.net/img/MarginPadding01_TN.jpg" alt="Margin and Padding" /></a>
+
         <h1>Margins and Paddings</h1>
+
         <button>Submit</button>
       </section>
     </main>
