--- a/020-pixel-rem-em/index.html
+++ b/020-pixel-rem-em/index.html
@@ -12,6 +12,14 @@
 
     <main>
       <section class="text-section">
+
+        <h3>
+          By design, the default font size is 16px. Using pixels will override the users accessibility to change the font size in the browser. rem does not have this problem. Always use rem.
+          rem only looks at the root html font size which is by default is 16px
+          1 rem = 16px
+          Keep the root html font size in percentage by 62.5% to make the 1 rem = 10px, easier for the calculation.
+        </h3>
+
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut, aliquid.</p>
         <div>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita omnis minus fuga soluta tempora accusantium cumque sapiente. Libero, culpa voluptatum!</p>
