--- a/021-position/index.html
+++ b/021-position/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <div class="container">
-      <h1>somethig</h1>
+      <h1>Different Positions</h1>
       <div class="box1"></div>
       <div class="box2"></div>
       <div class="box3"></div>
