--- a/022-flex/index.html
+++ b/022-flex/index.html
@@ -5,10 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Flex</title>
+    <title>flex</title>
   </head>
 
   <body>
+    <p>
+      CSS Flex box is a modern layout mode in CSS3. It replaces floats and it is much more elegant to work with.<br>
+      Aligns items both horizontal (row) and vertical (column). Flex box is made for one dimensional layouts. <br>
+      This means if we are laying out items in one direction (either the horizontal or the vertical axis) then we should use Flex box.
+    </p>
     <div class="container">
       <div class="box1 box">
         <h1>Box1</h1>
