--- a/023-grid/index.html
+++ b/023-grid/index.html
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+    <p>
+      CSS Grid Grid is two-dimensional. CSS Grid lets us work along two axes: horizontally and vertically. <br>
+      Grid allows us to create two-dimensional layouts where we can place grid items into cells defined by rows and columns. <br>
+      Grid makes it easier to design web pages without having to use floats and positioning.
+    </p>
     <div class="boxes">
       <div class="box1 box">
         <h1>Box1</h1>
