--- a/040-nav-bar/contact/index.html
+++ b/040-nav-bar/contact/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Sample nav bar using float">
     <meta name="author" content="Afsarsoft, Surush Cyrus (Rahimi Movaghar)">
     <link rel="stylesheet" href="../styles/style.css">
-    <title>Afsarsoft | Contact</title>
+    <title>nav bar, float | Contact</title>
   </head>
 
   <body>
