--- a/041-nav-bar/contact/index.html
+++ b/041-nav-bar/contact/index.html
@@ -4,10 +4,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Sample nav bar using float">
-    <meta name="author" content="Afsarsoft, Surush Cyrus (Rahimi Movaghar)">
     <link rel="stylesheet" href="../styles/style.css">
-    <title>Afsarsoft | Contact</title>
+    <title>nav bar, flex | Contact</title>
   </head>
 
   <body>
