--- a/041-nav-bar/index.html
+++ b/041-nav-bar/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
-    <title>nav bar | flex</title>
+    <title>nav bar, flex | Home</title>
   </head>
 
   <body>
