--- a/001-hello-world/index.html
+++ b/001-hello-world/index.html
@@ -1,2 +1,10 @@
+<h3>
+  HTML (Hyper Text Markup Language) describes the structure of a Web page. <br>
+  HTML tags tell the browser how to display the content such as "heading", "paragraph", "table", ... on the web page. <br>
+  The purpose of a web browser (Chrome, Edge, Firefox, Safari) is to read HTML documents and display them. HTML tags are surrounded by angle brackets. <br>
+  In summary, HTML defines the content of web pages. <br>
+</h3>
+
 <h1>Hello World</h1>
+
 <p>This is my first webpage</p>
