--- a/016-intro/index.html
+++ b/016-intro/index.html
@@ -9,6 +9,10 @@
   </head>
 
   <body>
+    <h2>
+      CSS (Cascading Style Sheets) is a language that describes the style of an HTML document. CSS describes how HTML elements should be displayed. <br>
+      In summary, CSS describes the layout of web pages.
+    </h2>
     <h1>Getting started with CSS!</h1>
     <h3 class="first-title">Mom is cooking the good stuff</h3>
     <h3>Mom is cooking the good stuff</h3>
