--- a/100-drag-drop/index.html
+++ b/100-drag-drop/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>ProjectManager</title>
-    <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="styles/style.css">
     <script type="module" src="dist/bundle.js"></script>
   </head>
 
