--- a/102-color-flipper-hex/hex.html
+++ b/102-color-flipper-hex/hex.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Color Flipper || Simple</title>
+    <title>Color Flipper || Hex</title>
     <!-- styles -->
-    <!-- <link rel="stylesheet" href="styles.css" /> -->
     <link rel="stylesheet" href="/styles/style.css" />
+    <!-- <link rel="stylesheet" href="styles.css" /> -->
   </head>
 
   <body>
@@ -27,7 +27,8 @@
       </div>
     </main>
     <!-- javascript -->
-    <script src="app.js"></script>
+    <script type="module" src="dist/bundle.js"></script>
+    <!-- <script src="hex1.js"></script> -->
   </body>
 
 </html>
