--- a/102-color-flipper-reg/index.html
+++ b/102-color-flipper-reg/index.html
@@ -4,20 +4,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Color Flipper || Hex</title>
-    <!-- styles -->
+    <title>Color Flipper | Regular</title>
     <link rel="stylesheet" href="/styles/style.css" />
-    <!-- <link rel="stylesheet" href="styles.css" /> -->
   </head>
 
   <body>
     <nav>
       <div class="nav-center">
-        <h4>color flipper</h4>
-        <ul class="nav-links">
-          <li><a href="index.html">simple</a></li>
-          <li><a href="hex.html">hex</a></li>
-        </ul>
+        <h4>color flipper, Regular</h4>
       </div>
     </nav>
     <main>
@@ -26,8 +20,7 @@
         <button class="btn btn-hero" id="btn">click me</button>
       </div>
     </main>
-    <!-- javascript -->
-    <script src="hex.js"></script>
+    <script type="module" src="dist/bundle.js"></script>
   </body>
 
 </html>
