--- a/102-color-flipper-reg/index.html
+++ b/102-color-flipper-reg/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color Flipper | Regular</title>
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
   <body>
@@ -20,7 +20,7 @@
         <button class="btn btn-hero" id="btn">click me</button>
       </div>
     </main>
-    <script type="module" src="dist/bundle.js"></script>
+    <script type="module" src="./dist/bundle.js"></script>
   </body>
 
 </html>
