--- a/102-color-flipper-hex/index.html
+++ b/102-color-flipper-hex/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Color Flipper | Hex</title>
   </head>
 
@@ -20,7 +20,7 @@
         <button class="btn btn-hero" id="btn">click me</button>
       </div>
     </main>
-    <script type="module" src="dist/bundle.js"></script>
+    <script type="module" src="./dist/bundle.js"></script>
   </body>
 
 </html>
