--- a/104-counter/index.html
+++ b/104-counter/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link rel="stylesheet" href="styles.css" /> -->
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Counter</title>
   </head>
 
@@ -22,7 +22,7 @@
       </div>
     </main>
     <!-- <script src="app.js"></script> -->
-    <script type="module" src="dist/bundle.js"></script>
+    <script type="module" src="./dist/bundle.js"></script>
   </body>
 
 </html>
