--- a/100-drag-drop/index.html
+++ b/100-drag-drop/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>ProjectManager</title>
-    <link rel="stylesheet" href="styles/style.css">
-    <script type="module" src="dist/bundle.js"></script>
+    <title>Project Manager</title>
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
 
   <body>
@@ -44,6 +43,9 @@
       </section>
     </template>
     <div id="app"></div>
+
+    <script type="module" src="./dist/bundle.js"></script>
+
   </body>
 
 </html>
