--- a/108-movie-seat-booking/index.html
+++ b/108-movie-seat-booking/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Movie Seat Booking</title>
   </head>
 
@@ -23,7 +23,7 @@
     <ul class="showcase">
       <li>
         <div class="seat"></div>
-        <small>N/A</small>
+        <small>Available</small>
       </li>
       <li>
         <div class="seat selected"></div>
@@ -104,8 +104,7 @@
       You have selected <span id="count">0</span> seats for a price of $<span id="total">0</span>
     </p>
 
-    <!-- <script src="script.js"></script> -->
-    <script type="module" src="dist/bundle.js"></script>
+    <script type="module" src="./dist/bundle.js"></script>
   </body>
 
 </html>
