--- a/300-hello-world/index.html
+++ b/300-hello-world/index.html
@@ -11,6 +11,7 @@
 
   <body>
     <div id="app">
+      <h4>Displaying simple message</h4>
       <!--{{}} called Interpolation -->
       <!-- Vue looks in data object for title property-->
       <p>{{title}}</p>
