--- a/301-hello-world/index.html
+++ b/301-hello-world/index.html
@@ -11,6 +11,7 @@
   <body>
     <div id="app">
       <!-- calling a function -->
+      <h4>Displaying simple message by calling a function</h4>
       <p> {{sayHelloWorld()}}</p>
     </div>
 
