--- a/304-binding/index.html
+++ b/304-binding/index.html
@@ -10,8 +10,7 @@
 
   <body>
     <div id="app">
-      <!-- directives are instructions for our code -->
-      <!-- Vue directive v-bind, binds the elements  -->
+      <h4>Use of directive v-bind, to bind the elements</h4>
       <p>{{sayHello()}} - <a v-bind:href="link">Google</a></p>
     </div>
 
