--- a/310-input/index.html
+++ b/310-input/index.html
@@ -10,7 +10,8 @@
 
   <body>
     <div id="app">
-      <!-- allowing users to type something and update the title -->
+      <h4>Use of directive v-on:input to to type something and update the title</h4>
+
       <!-- directives are instructions for our code -->
       <!-- communicating with Vue with directive v-on: -->
       <!-- We are telling Vue to listen to input event -->
