--- a/314-counter/index.html
+++ b/314-counter/index.html
@@ -10,6 +10,8 @@
 
   <body>
     <div id="app">
+      <h4>Use of directive v-on:click to increase and decrease counter</h4>
+
       <button v-on:click="counter++">Increase</button>
       <button v-on:click="counter--">Decrease</button>
       <p>Counter: {{counter}}</p>
