--- a/315-counter/index.html
+++ b/315-counter/index.html
@@ -10,6 +10,8 @@
 
   <body>
     <div id="app">
+      <h4>Use of directive v-on:click and computed property fro caching</h4>
+
       <button v-on:click="counterA++">Increase A</button>
       <button v-on:click="counterA--">Decrease A</button>
       <button v-on:click="counterB++">Increase B</button>
