--- a/321-coordinates/index.html
+++ b/321-coordinates/index.html
@@ -10,6 +10,8 @@
 
   <body>
     <div id="app">
+      <h4>Use of directive v-on:mousemove and v-on:mousemove.stop to display coordinates</h4>
+
       <!-- with v-on we listen to events -->
       <p v-on:mousemove="updateCoordinates">
         Coordinates: {{x}} / {{y}}
