--- a/330-key-modifier/index.html
+++ b/330-key-modifier/index.html
@@ -10,8 +10,7 @@
 
   <body>
     <div id="app">
-      <!-- with v-on we listen to events -->
-      <!-- using key modifier, alert when enter or space used-->
+      <h4>Use of key modifier v-on:keyup.enter.space and alert when enter or space</h4>
       <input type="text" v-on:keyup.enter.space="alertMe">
     </div>
 
