--- a/332-two-way-binding/index.html
+++ b/332-two-way-binding/index.html
@@ -10,8 +10,8 @@
 
   <body>
     <div id="app">
-      <!-- with v-model we perform tow way binding -->
-      <!-- taking the data and modifying it.-->
+      <h4>Use of v-model to perform two way binding</h4>
+      <h4>Taking the data and modifying it.</h4>
       <input type="text" v-model="name">
       <p>{{name}}</p>
     </div>
