--- a/302-hello/index.html
+++ b/302-hello/index.html
@@ -10,6 +10,7 @@
 
   <body>
     <div id="app">
+      <h4>Displaying simple message by calling a function</h4>
       <!-- calling a function -->
       <p> {{sayHello()}}</p>
     </div>
