--- a/306-v-once/index.html
+++ b/306-v-once/index.html
@@ -10,9 +10,7 @@
 
   <body>
     <div id="app">
-      <!-- <h1>{{title}}</h1> -->
-
-      <!-- v-once directive can hold info once  -->
+      <h4>Use of directive v-once, to hold info once</h4>
       <h1 v-once>{{title}}</h1>
       <p>{{sayHello()}} - <a v-bind:href="link">Google</a></p>
     </div>
