--- a/312-counter/index.html
+++ b/312-counter/index.html
@@ -10,6 +10,8 @@
 
   <body>
     <div id="app">
+      <h4>Use of directive v-on:click to increase counter</h4>
+
       <!-- with v-on we listen to events -->
       <button v-on:click="increase">Click me</button>
       <p>{{counter}}</p>
