--- a/313-counter/index.html
+++ b/313-counter/index.html
@@ -10,6 +10,8 @@
 
   <body>
     <div id="app">
+      <h4>Use of directive v-on:click to increase counter by 2</h4>
+
       <!-- with v-on we listen to events -->
       <!-- using parameter -->
       <button v-on:click="increase(2)">Click me</button>
