--- a/300-hello-world/index.html
+++ b/300-hello-world/index.html
@@ -23,9 +23,11 @@
       // The argument is JavaScript object
       new Vue({
         // el is Vue reserved string property
-        // using # for id and using . for class
+        // el connects to dom
+        // Same concept in CSS, # for id and using . for class
         el: '#app',
         // we store all data in Vue reserve object property data
+        // Store data to be used
         data: {
           title: 'Hello World!'
         }
