--- a/301-hello-world/index.html
+++ b/301-hello-world/index.html
@@ -22,6 +22,7 @@
           title: 'Hello World!'
         },
         // reserved object property methods for calling functions
+        // methods of this vue instance
         methods: {
           sayHelloWorld() {
             // this gives access to all Vue instance info!
