--- a/302-hello/index.html
+++ b/302-hello/index.html
@@ -22,6 +22,7 @@
           title: 'TBD'
         },
         // reserved object property methods for calling functions
+        // methods of this vue instance
         methods: {
           sayHello() {
             return 'Hello!';
