--- a/316-counter/index.html
+++ b/316-counter/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <div id="app">
-      <h4>Use of directive v-on:click and computed property for caching</h4>
+      <h4>Use of directive v-on:click and watch property</h4>
 
       <button v-on:click="counterA++">Increase A</button>
       <button v-on:click="counterA--">Decrease A</button>
@@ -27,17 +27,27 @@
           counterB: 0
         },
         // Computed is a dependent properties
-        // Computed defines it as a function
-        // but behaves as property and we can call it as property
-        // result function gets call every time
-        // for computed property, Vue is aware that output is not interested on counterB
-        // so, output not being executed. We are caching the result of counterB
-        // and not interested for calculating it.
-        // only use the method when you want to calculate and not caching
         computed: {
           output() {
             console.log('Computed');
             return this.counterA > 5 ? 'Greater 5' : 'Smaller than 5'
+          }
+        },
+        // In computed, we set up the property as a function.
+        // we set up the logic how this property should be computed.
+        // watch, kind of works the other way around
+        // watch executes code when data changes
+        watch: {
+          // execute the function when counter changes
+          // allows us to react to changes
+          // We should use computed properties when we can. They are more optimized
+          // Here we want to reset counter after 2 seconds
+          counterA: function (value) {
+            // storing Vue instance in separate variable
+            const vm = this;
+            setTimeout(() => {
+              vm.counterA = 0;
+            }, 2000);
           }
         },
         methods: {
