--- a/300-hello-world/index.html
+++ b/300-hello-world/index.html
@@ -22,7 +22,7 @@
       // passing argument to the constructor function
       // The argument is JavaScript object
       new Vue({
-        // el is Vue reserved string property
+        // el is Vue reserved string property for element
         // el connects to dom
         // Same concept in CSS, # for id and using . for class
         el: '#app',
