--- a/301-hello-world/index.html
+++ b/301-hello-world/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <script>
-      new Vue({
+      let app = new Vue({
         el: '#app',
         data: {
           title: 'Hello World!'
