--- a/013-iframe/index.html
+++ b/013-iframe/index.html
@@ -2,40 +2,37 @@
 
 <html>
 
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Surush Cyrus website">
-    <meta name="keywords" content="Surush Cyrus, ...add more stuff ...>">
-    <meta name="author" content="Surush Cyrus">
-    <title>iframe</title>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Surush Cyrus website">
+  <meta name="keywords" content="Surush Cyrus, ...add more stuff ...>">
+  <meta name="author" content="Surush Cyrus">
+  <title>iframe</title>
+</head>
 
-  <body>
-    <h1>Iframe</h1>
-    <hr />
+<body>
+  <h1>Iframe</h1>
+  <hr>
 
-    <!--
-    Iframe is being used to embed other websites inside your page.
-    -->
-    <iframe src="https://surushcyrus.com" frameborder="0" width="1000" height="800">
-      Sorry iframe is not supported on surushcyrus.com
-    </iframe>
+  <!-- Iframe is being used to embed other websites inside your page. -->
 
-    <iframe src="https://giraffeacademy.com" frameborder="0" width="1000" height="800">
-      Sorry iframe is not supported on giraffeacademy.com
-    </iframe>
+  <iframe src="https://www.surushcyrus.com/" frameborder="0" width="1000" height="800">
+    Sorry iframe is not supported on www.surushcyrus.com
+  </iframe>
 
-    <!--
-    <iframe src="https://amazon.com" frameborder="0" width="1000" height="800">
-        Sorry iframe is not supported on amazon.com
-    </iframe>
-    -->
+  <iframe src="https://www.afsarsoft.com/" frameborder="0" width="1000" height="800">
+    Sorry iframe is not supported on www.afsarsoft.com
+  </iframe>
 
-    <iframe src="http://www.mikedane.com" frameborder="0" width="1000" height="800">
-      sorry iframe is not supported on www.mikedane.com
-    </iframe>
+  <iframe src="https://www.afsartravel.com/" frameborder="0" width="1000" height="800">
+    Sorry iframe is not supported on www.afsartravel.com
+  </iframe>
 
-  </body>
+  <iframe src="https://www.afsared.org/" frameborder="0" width="1000" height="800">
+    Sorry iframe is not supported on www.afsared.org
+  </iframe>
+
+</body>
 
 </html>
