--- a/230-counter/index.html
+++ b/230-counter/index.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <title>Counter</title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./styles/style.css" />
+  <title>Counter</title>
+  <script src="https://unpkg.com/vue@next"></script>
+</head>
 
-  <body>
-    <main>
-      <div id="app" class="container">
-        <h1>counter</h1>
+<body>
+  <main>
+    <div id="counter" class="container">
+      <h1>counter</h1>
 
-        <div :style="myStyle">
-          <span id="value">{{displayCounter()}}</span>
-        </div>
-
-        <div class="button-container">
-          <button @click="decreaseCounter()" class="btn decrease">decrease</button>
-          <button @click="resetCounter()" class="btn reset">reset</button>
-          <button @click="increaseCounter()" class="btn increase">increase</button>
-        </div>
+      <div :style="myStyle">
+        <span id="value">{{displayCounter()}}</span>
+        <!-- <span id="value">{{counter}}</span> -->
       </div>
-    </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="./main.js"></script>
-  </body>
+      <div class="button-container">
+        <button @click="decreaseCounter" class="btn decrease">decrease</button>
+        <button @click="resetCounter" class="btn reset">reset</button>
+        <button @click="increaseCounter" class="btn increase">increase</button>
+      </div>
+
+    </div>
+  </main>
+  <script src="./main.js"></script>
+</body>
 
 </html>
