--- a/220-shopping-list-1/index.html
+++ b/220-shopping-list-1/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <title>Shopping List App</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <title>Shopping List App</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://unpkg.com/vue@next"></script>
+</head>
 
-  <body>
+<body>
+  <main id="shopping">
     <div id="shopping-list">
       <div class="header">
         <h1>{{ header.toLocaleUpperCase() }}</h1>
@@ -24,58 +26,8 @@
       </ul>
       <p v-if="items.length === 0">Nice job! You have bought all your items.</p>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script>
-      var shoppingList = new Vue({
-        el: '#shopping-list',
-        data: {
-          state: 'default',
-          header: 'shopping list app',
-          newItem: '',
-          items: [
-            {
-              label: '10 party hats',
-              purchased: false,
-            },
-            {
-              label: '2 boards games',
-              purchased: true,
-            },
-            {
-              label: '20 cups',
-              purchased: false,
-            }
-          ]
-        },
-        // when we need to change the data, we use method
-        // When we need to change the presentation of existing data, we use computed properties
-        computed: {
-          characterCount() {
-            return this.newItem.length;
-          },
-          reversedItems() {
-            return this.items.slice(0).reverse();
-          }
-        },
-        methods: {
-          saveItem() {
-            this.items.push({
-              label: this.newItem,
-              purchased: false
-            });
-            this.newItem = '';
-          },
-          changeState(newState) {
-            this.state = newState;
-            this.newItem = '';
-          },
-          togglePurchased(item) {
-            item.purchased = !item.purchased;
-          }
-
-        }
-      });
-    </script>
-  </body>
+  </main>
+  <script src="./main.js"></script>
+</body>
 
 </html>
