--- a/270-2binding/index.html
+++ b/270-2binding/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <h1>Vue Events, 2 Ways Binding</h1>
+    <h1>Vue, 2 Ways Binding, v-model</h1>
   </header>
   <main id="bind2">
     <section id="events">
