--- a/240-goals/index.html
+++ b/240-goals/index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vue Basics</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles.css" />
+    <script src="https://unpkg.com/vue@next"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vue Basics</title>
-  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="./styles.css" />
-  <script src="https://unpkg.com/vue@next"></script>
-</head>
-
-<body>
-  <header>
-    <h1>Goals</h1>
-  </header>
-  <main id='goal'>
-    <section id="user-goal">
-      <h2>Daily Goals</h2>
-      <!--{{}} called Interpolation,Vue looks in data object for it-->
-      <p>{{ goal1 }}</p>
-      <p>{{ goal2 }}</p>
-      <p>{{ goal3 }}</p>
-    </section>
-  </main>
-  <script src="app.js"></script>
-</body>
-
+  <body>
+    <header>
+      <h1>Goals</h1>
+    </header>
+    <main id="goal">
+      <section id="user-goal">
+        <h2>Daily Goals</h2>
+        <!--{{}} called Interpolation,Vue looks in data object for it-->
+        <p>{{ goal1 }}</p>
+        <p>{{ goal2 }}</p>
+        <p>{{ goal3 }}</p>
+        <p>{{ goal4 }}</p>
+      </section>
+    </main>
+    <script src="app.js"></script>
+  </body>
 </html>
